# ItoCopter_alt_control

./: .gitignore  CMakeLists.txt  README.md  control.cpp  control.hpp  ekf.cpp  ekf.hpp  pico_copter.cpp  pwm.cpp  radio.cpp  radio.hpp  regression_2.py  sensor.cpp  sensor.hpp
